refactor cotacao pacotes
