# resources/views/cotacao_pacotes/show_fields.blade.php
@@ -1,0 +1,246 @@
+<!-- Id Field -->
+<div class="form-group">
+    {!! Form::label('id', 'Id:') !!}
+    <p>{!! $cotacaoPacote->id !!}</p>
+</div>
+
+<!-- Origem Field -->
+<div class="form-group">
+    {!! Form::label('origem', 'Origem:') !!}
+    <p>{!! $cotacaoPacote->origem !!}</p>
+</div>
+
+<!-- Destino Field -->
+<div class="form-group">
+    {!! Form::label('destino', 'Destino:') !!}
+    <p>{!! $cotacaoPacote->destino !!}</p>
+</div>
+
+<!-- Data Ida Field -->
+<div class="form-group">
+    {!! Form::label('data_ida', 'Data Ida:') !!}
+    <p>{!! $cotacaoPacote->data_ida !!}</p>
+</div>
+
+<!-- Data Volta Field -->
+<div class="form-group">
+    {!! Form::label('data_volta', 'Data Volta:') !!}
+    <p>{!! $cotacaoPacote->data_volta !!}</p>
+</div>
+
+<!-- Datas Flexiveis Field -->
+<div class="form-group">
+    {!! Form::label('datas_flexiveis', 'Datas Flexiveis:') !!}
+    <p>{!! $cotacaoPacote->datas_flexiveis !!}</p>
+</div>
+
+<!-- Qnt Adultos Field -->
+<div class="form-group">
+    {!! Form::label('qnt_adultos', 'Qnt Adultos:') !!}
+    <p>{!! $cotacaoPacote->qnt_adultos !!}</p>
+</div>
+
+<!-- Qnt Criancas Field -->
+<div class="form-group">
+    {!! Form::label('qnt_criancas', 'Qnt Criancas:') !!}
+    <p>{!! $cotacaoPacote->qnt_criancas !!}</p>
+</div>
+
+<!-- Qnt Bebes Field -->
+<div class="form-group">
+    {!! Form::label('qnt_bebes', 'Qnt Bebes:') !!}
+    <p>{!! $cotacaoPacote->qnt_bebes !!}</p>
+</div>
+
+<!-- Periodo Voo Ida Field -->
+<div class="form-group">
+    {!! Form::label('periodo_voo_ida', 'Periodo Voo Ida:') !!}
+    <p>{!! $cotacaoPacote->periodo_voo_ida !!}</p>
+</div>
+
+<!-- Periodo Voo Volta Field -->
+<div class="form-group">
+    {!! Form::label('periodo_voo_volta', 'Periodo Voo Volta:') !!}
+    <p>{!! $cotacaoPacote->periodo_voo_volta !!}</p>
+</div>
+
+<!-- Aeroporto Origem Field -->
+<div class="form-group">
+    {!! Form::label('aeroporto_origem', 'Aeroporto Origem:') !!}
+    <p>{!! $cotacaoPacote->aeroporto_origem !!}</p>
+</div>
+
+<!-- Aeroporto Retorno Field -->
+<div class="form-group">
+    {!! Form::label('aeroporto_retorno', 'Aeroporto Retorno:') !!}
+    <p>{!! $cotacaoPacote->aeroporto_retorno !!}</p>
+</div>
+
+<!-- Companias Aereas Preferenciais Field -->
+<div class="form-group">
+    {!! Form::label('companias_aereas_preferenciais', 'Companias Aereas Preferenciais:') !!}
+    <p>{!! $cotacaoPacote->companias_aereas_preferenciais !!}</p>
+</div>
+
+<!-- Numero Paradas Field -->
+<div class="form-group">
+    {!! Form::label('numero_paradas', 'Numero Paradas:') !!}
+    <p>{!! $cotacaoPacote->numero_paradas !!}</p>
+</div>
+
+<!-- Tempo Voo Field -->
+<div class="form-group">
+    {!! Form::label('tempo_voo', 'Tempo Voo:') !!}
+    <p>{!! $cotacaoPacote->tempo_voo !!}</p>
+</div>
+
+<!-- Aereo Preco Desejado Field -->
+<div class="form-group">
+    {!! Form::label('aereo_preco_desejado', 'Aereo Preco Desejado:') !!}
+    <p>{!! $cotacaoPacote->aereo_preco_desejado !!}</p>
+</div>
+
+<!-- Hotel Ou Regiao Field -->
+<div class="form-group">
+    {!! Form::label('hotel_ou_regiao', 'Hotel Ou Regiao:') !!}
+    <p>{!! $cotacaoPacote->hotel_ou_regiao !!}</p>
+</div>
+
+<!-- Qnt Quartos Field -->
+<div class="form-group">
+    {!! Form::label('qnt_quartos', 'Qnt Quartos:') !!}
+    <p>{!! $cotacaoPacote->qnt_quartos !!}</p>
+</div>
+
+<!-- Tipo Quarto Field -->
+<div class="form-group">
+    {!! Form::label('tipo_quarto', 'Tipo Quarto:') !!}
+    <p>{!! $cotacaoPacote->tipo_quarto !!}</p>
+</div>
+
+<!-- Hospedagem Servicos Field -->
+<div class="form-group">
+    {!! Form::label('hospedagem_servicos', 'Hospedagem Servicos:') !!}
+    <p>{!! $cotacaoPacote->hospedagem_servicos !!}</p>
+</div>
+
+<!-- Hospedagem Tipo Field -->
+<div class="form-group">
+    {!! Form::label('hospedagem_tipo', 'Hospedagem Tipo:') !!}
+    <p>{!! $cotacaoPacote->hospedagem_tipo !!}</p>
+</div>
+
+<!-- Hospedagem Solicitacoes Field -->
+<div class="form-group">
+    {!! Form::label('hospedagem_solicitacoes', 'Hospedagem Solicitacoes:') !!}
+    <p>{!! $cotacaoPacote->hospedagem_solicitacoes !!}</p>
+</div>
+
+<!-- Hospedagem Preco Desejado Field -->
+<div class="form-group">
+    {!! Form::label('hospedagem_preco_desejado', 'Hospedagem Preco Desejado:') !!}
+    <p>{!! $cotacaoPacote->hospedagem_preco_desejado !!}</p>
+</div>
+
+<!-- Transporte Interno Field -->
+<div class="form-group">
+    {!! Form::label('transporte_interno', 'Transporte Interno:') !!}
+    <p>{!! $cotacaoPacote->transporte_interno !!}</p>
+</div>
+
+<!-- Tipos Transfer Field -->
+<div class="form-group">
+    {!! Form::label('tipos_transfer', 'Tipos Transfer:') !!}
+    <p>{!! $cotacaoPacote->tipos_transfer !!}</p>
+</div>
+
+<!-- Categorias Carro Field -->
+<div class="form-group">
+    {!! Form::label('categorias_carro', 'Categorias Carro:') !!}
+    <p>{!! $cotacaoPacote->categorias_carro !!}</p>
+</div>
+
+<!-- Itens Carro Field -->
+<div class="form-group">
+    {!! Form::label('itens_carro', 'Itens Carro:') !!}
+    <p>{!! $cotacaoPacote->itens_carro !!}</p>
+</div>
+
+<!-- Transporte Interno Solicitacoes Field -->
+<div class="form-group">
+    {!! Form::label('transporte_interno_solicitacoes', 'Transporte Interno Solicitacoes:') !!}
+    <p>{!! $cotacaoPacote->transporte_interno_solicitacoes !!}</p>
+</div>
+
+<!-- Transporte Interno Preco Desejado Field -->
+<div class="form-group">
+    {!! Form::label('transporte_interno_preco_desejado', 'Transporte Interno Preco Desejado:') !!}
+    <p>{!! $cotacaoPacote->transporte_interno_preco_desejado !!}</p>
+</div>
+
+<!-- Passeios Interesses Field -->
+<div class="form-group">
+    {!! Form::label('passeios_interesses', 'Passeios Interesses:') !!}
+    <p>{!! $cotacaoPacote->passeios_interesses !!}</p>
+</div>
+
+<!-- Passeios Outros Field -->
+<div class="form-group">
+    {!! Form::label('passeios_outros', 'Passeios Outros:') !!}
+    <p>{!! $cotacaoPacote->passeios_outros !!}</p>
+</div>
+
+<!-- Passeios Preco Desejado Field -->
+<div class="form-group">
+    {!! Form::label('passeios_preco_desejado', 'Passeios Preco Desejado:') !!}
+    <p>{!! $cotacaoPacote->passeios_preco_desejado !!}</p>
+</div>
+
+<!-- Nomes Seguro Viagem Field -->
+<div class="form-group">
+    {!! Form::label('nomes_seguro_viagem', 'Nomes Seguro Viagem:') !!}
+    <p>{!! $cotacaoPacote->nomes_seguro_viagem !!}</p>
+</div>
+
+<!-- Datas Nascimento Seguro Viagem Field -->
+<div class="form-group">
+    {!! Form::label('datas_nascimento_seguro_viagem', 'Datas Nascimento Seguro Viagem:') !!}
+    <p>{!! $cotacaoPacote->datas_nascimento_seguro_viagem !!}</p>
+</div>
+
+<!-- Contato Nome Completo Field -->
+<div class="form-group">
+    {!! Form::label('contato_nome_completo', 'Contato Nome Completo:') !!}
+    <p>{!! $cotacaoPacote->contato_nome_completo !!}</p>
+</div>
+
+<!-- Contato Nome Preferencia Field -->
+<div class="form-group">
+    {!! Form::label('contato_nome_preferencia', 'Contato Nome Preferencia:') !!}
+    <p>{!! $cotacaoPacote->contato_nome_preferencia !!}</p>
+</div>
+
+<!-- Contato Email Field -->
+<div class="form-group">
+    {!! Form::label('contato_email', 'Contato Email:') !!}
+    <p>{!! $cotacaoPacote->contato_email !!}</p>
+</div>
+
+<!-- Contato Telefone Field -->
+<div class="form-group">
+    {!! Form::label('contato_telefone', 'Contato Telefone:') !!}
+    <p>{!! $cotacaoPacote->contato_telefone !!}</p>
+</div>
+
+<!-- Created At Field -->
+<div class="form-group">
+    {!! Form::label('created_at', 'Created At:') !!}
+    <p>{!! $cotacaoPacote->created_at !!}</p>
+</div>
+
+<!-- Updated At Field -->
+<div class="form-group">
+    {!! Form::label('updated_at', 'Updated At:') !!}
+    <p>{!! $cotacaoPacote->updated_at !!}</p>
+</div>
+
